[tool.poetry]
name = "hexlet_pytest"
version = "1.1.12"
description = ""
authors = ["Doniyor <doniyorshavkati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
